--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -29,6 +29,13 @@ body {
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
+
+    @media (max-width: 599px) {
+      width: 100%;
+      height: 100vh;
+      flex-direction: column;
+    }
+
     .stripe {
       box-shadow: 10px 0 10px rgba(0, 0, 0, 0.1);
       width: 40%;
@@ -36,6 +43,12 @@ body {
       background-color: $main;
       @include center;
       transition: 0.3s;
+
+      @media (max-width: 599px) {
+        width: 100%;
+        height: 30%;
+      }
+
       h1 {
         color: #2dc59f;
         font-size: 40px;
@@ -45,6 +58,12 @@ body {
 
       &:hover {
         width: 50%;
+
+        @media (max-width: 599px) {
+          width: 100%;
+          height: 40%;
+        }
+
         h1 {
           font-size: 50px;
         }
@@ -57,6 +76,10 @@ body {
         display: flex;
         flex-direction: column;
         width: 250px;
+
+        @media (max-width: 599px) {
+          width: 90%;
+        }
 
         input {
           margin-bottom: 20px;
